# model

./: .gitignore
arduino/: README.md  button.ino
c/: binary.c  test.c
cpp/: argv.cpp  atomic.cpp  class.cpp  const.cpp  const_attempt.cpp  const_convertion.cpp  const_prototype.cpp  container_issue.cpp  filesystem.cpp  fmod.cpp  json.cpp  limit_int.cpp  main.cpp  override.cpp  ownership.cpp  poly.cpp  poly_codingame.cpp  reinterpret_cast.cpp  singleton.cpp  singleton_without_leak.cpp  static_cast.cpp  test.cpp  trait.cpp  type_size.cpp  vector.cpp
fortran/: MPI_ping.F90  main.f90  ramer_douglas_peucker.f90
hzv/: X-H-Mag.txt
hzv/codingame/spring_challenge_2021/: Cargo.toml
hzv/codingame/spring_challenge_2021/src/: main.rs
parcel/: bro.js  index.html  index.js  note.txt  package-lock.json  package.json
python/: 8_dame.py  ast_dump.py  base_three.py  basic_animation.py  binascii-example-1.py  classes.py  histogram.py  inset_locator_demo2.py  labyrinthe.py  mandelobrot.py  sierpinski_animation.py  simple_clang.py  string_argument.py  surface3d_radial_demo.py  to_plot.py
pythran/: dot.py  main_scrabble.py  scabble.py  scrabble.py
rust/: .gitignore  note.md
superpowered/: index.html  main.js  output.txt  player_response.txt  raw.txt  superpowered.js
webaudio/: index.html  main.js
webgl2/: 02-how-it-works-rectangle-with-random-colors.html  03-geometry-matrix-transform-simpler-functions-01.html  04-3d-orthographic-01.html  05-3d-perspective-01.html  06-3d-camera-01.html  06-3d-camera-02.html  07-no-data-01.html  07-no-data-02.html  README.md
(+2619 files in other folders)
