[package]
name = "spring_challenge_2021"
version = "0.1.0"
authors = ["frozar <fabien.rozar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.0"

[[bin]]
name = "spring_challenge_2021"
path = "src/main.rs"
test = false
bench = false
